feat: add appliance management
